kylin-greeter (18.04.0) bionic; urgency=medium

  * Add show/hide password function to the text entry.
  * Update the log and background from 17.10 to 18.04.

 -- handsome_feng <jianfengli@ubuntukylin.com>  Wed, 28 Feb 2018 10:52:08 +0800

kylin-greeter (17.10.2) artful; urgency=medium

  * Change the login button according to the value of 'LANG'.
  * Update the logo and background from 1704 to 1710.
  * Fix the caps warning.
  * Fix the wrong button state of arrow_left.

 -- handsome_feng <jianfengli@ubuntukylin.com>  Tue, 19 Sep 2017 19:37:21 +0800

kylin-greeter (17.10.0) artful; urgency=medium

  * Set name label's halign to center. (LP: #1552664)
  * Fix the theme error. (LP: #1683789)
  * Add hover/active status on arrow_left and arrow_right.
  * Use mate-settings-daemon instead of unity-settings-daemon.

 -- handsome_feng <jianfengli@ubuntukylin.com>  Mon, 26 Jun 2017 17:02:43 +0800

kylin-greeter (17.04.0) zesty; urgency=medium

  * Added support for UKUI.
  * Updated the background.png.

 -- handsome_feng <jianfengli@ubuntukylin.com>  Thu, 16 Mar 2017 09:54:32 +0800

kylin-greeter (16.10.1) yakkety; urgency=medium

  *  fixed the allocation bug when upgrade to gtk3.20

 -- zhangchao <zhangchao@ubuntukylin.com>  Mon, 03 Oct 2016 14:16:22 +0800

kylin-greeter (16.10.0) xenial; urgency=medium

  *  change logo to 16.10
  *  add gtk3.20 theme css
  *  Work around Vala trying to use a new GTK 3.20 function

 -- zhangchao <zhangchao@ubuntukylin.com>  Thu, 18 Aug 2016 17:06:36 +0800

kylin-greeter (16.04.5) xenial; urgency=medium

  *  cleanup keyboard in advance and sleep 0.003s,Make sure that onboard is properly ended(LP: #1524662)
  *  add keyboard move in Multiple screens

 -- zhangchao <zhangchao@ubuntukylin.com>  Tue, 14 Jun 2016 14:21:59 +0800

kylin-greeter (16.04.4) xenial; urgency=medium

  *  Limit prompt fields to 200 characters in case a key is being held down (e.g. by a cat).
  *  fix display error about passwd entry menu
