@@ -7,7 +7,7 @@ Build-Depends: at-spi2-core,
                dbus-x11,
                debhelper (>= 11),
                gnome-common,
-               mate-settings-daemon-dev,
+               ukui-settings-daemon-dev,
                libcanberra-dev,
                libgnome-desktop-3-dev,
                libgtk-3-dev,
@@ -24,7 +24,7 @@ Package: kylin-greeter
 Architecture: any
 Depends: ${misc:Depends},
          ${shlibs:Depends},
-         mate-settings-daemon,
+         ukui-settings-daemon,
 Provides: lightdm-greeter
 Description: Ubuntu Kylin Greeter
  The greeter for the Kylin desktop fork from unity-greeter.
